# LC-public

./: .gitignore  .gitignore.public  CITATION.cff  CLAUDE.md  CONCEPT.md  CONCEPT.md.best.bak  CONCEPT.md.best.json  CONCEPT.md.mbpr.md  CONCEPT.md.recommendations.md  CORRECTIONS_2026-04-22.md  DESIGN.md  EVIDENCE.md  LICENSE  MAP.md  MAP.md.mbpr.md  MEMORY.md  MEMORY.md.mbpr.json  MEMORY.md.mbpr.md  OPEN_PROBLEMS.md  PARAMETERS.md  PARAMETERS.md.mbpr.md  PI_TRACK_RECORD.md  PROJECT_AUDIT_2026-05-12.md  README.md  README.md.bak.iter1.20260517_005714  README.md.bak.iter2.20260517_005902  README.md.mbpr.md  STATE.md  STATE.md.mbpr.md  STRATEGY.md  THEORY.md  TODO.md  TODO.md.mbpr.json  TODO.md.mbpr.md  _pi.md  _pi.md.mbpr.md  pi.md  registry.json
AIM/: .gitignore  AI_run_self_diag.py  AI_self_diag.py  CHANGELOG.md  README.md  STACK.md  UPGRADE.md.draft  _pi.md  aim.db.backup-20260502-154658  aim.toml  aim_cli.py  bot_transcriber.py  ka_medical_dict.json  pyproject.toml  registry.json  tbpr_3level.py  tbpr_project_overnight.py  tbpr_project_overnight_v2.py  transcribe_patient.py  whisper_finetune_ka.py
AIM/AI/: FCLC_BORROW.md  HIVE_ARCHITECTURE.md  README.md
AIM/_archive/: README.md
AIM/_originals/: CONCEPT.ru.md  README.ru.md  TODO.ru.md  UPGRADE.ru.md
AIM/agents/: brief_preamble.py  citation_guard.py  citation_linter.py  cli_completion.py  deadline_scanner.py  diff_analyser.py  doctor_dry_run.py  evals.py  feature_flags.py  generalist.py  kernel.py  kpi_tracker.py  mcp_loader.py  memory_monitor.py  memory_remediator.py  module_registry.py  notify.py  orchestrator.py  own_pubs_tracker.py  patient_dedup.py  patient_inbox_watcher.py  pattern_miner.py  project_graph.py  project_pdf_export.py  project_state_machine.py  quick_action.py  readme_generator.py  recall_cli.py  recall_perf.py  regimen_validator.py  routines.py  serve_daemon.py  session_visualiser.py  tool_synthesis.py
AIM/deploy/: Caddyfile  README.md  aim-transcriber.service  nginx.conf
AIM/patient_intake/: app.py  gdrive_backup.py  patients.db  requirements.txt  start.sh
AIM/phoenix-umbrella/: README.md  mix.exs
AIM/rust-core/: Cargo.toml  README.md
AIM/scripts/: aim_self_diag_launcher.sh  auto_eval.py  daily_brief.py  e2e.sh  fix_deploy.sh  install_systemd.sh  setup_keys.sh  tbpr_orchestrator.py  weekly_digest.py
AIM/tests/: conftest.py  test_ab_router.py  test_aim_cli.py  test_brief_preamble.py  test_brief_preferences.py  test_citation_linter.py  test_cli_completion.py  test_daily_brief.py  test_deadline_scanner.py  test_doctor_consult.py  test_evals.py  test_feature_flags.py  test_follow_up_generator.py  test_generalist_v2_extras.py  test_generalist_v3.py  test_impact_analyser.py  test_kpi_auto_updater.py  test_kpi_tracker.py  test_law_gates.py  test_literature_watch.py  test_mcp_loader.py  test_memory_monitor.py  test_memory_remediator.py  test_module_registry.py  test_notify.py  test_orchestrator_reflexion.py  test_own_pubs_tracker.py  test_patient_dedup.py  test_permission_broker.py  test_project_export.py  test_project_graph.py  test_project_owner.py  test_project_pdf_export.py  test_prompt_evolver.py  test_quick_action.py  test_readme_generator.py  test_recall_cli.py  test_recall_perf.py  test_regimen_validator.py  test_skill_synthesis.py  (+2 more)
AIM/validate/: concept_versions.py  counter_numbering.py  ze_vstar.py
BioSense/: CLAUDE.md  CONCEPT.md  CONCEPT.md.bak_dedupe  CONCEPT.md.rollback.bak  Cargo.toml  Dockerfile  MAP.md.fix_bak  MEMORY.md.bak  PARAMETERS.md  PARAMETERS.md.bak  PROJECT_AUDIT_2026-05-12.md  README.md  STATE.md  STATE.md.bak  TODO.md  TODO.md.best.bak  _pi.md  _pi.md.fix_bak  run.sh
BioSense/.mbpr_backup_20260605_153325/: TODO.md.mbpr.json
BioSense/.mbpr_backup_20260605_153630/: PARAMETERS.md.mbpr.md  TODO.md.mbpr.md
BioSense/.mbpr_backup_20260605_153935/: STATE.md.mbpr.md
BioSense/.mbpr_backup_20260605_154545/: PARAMETERS.md.mbpr.json
BioSense/.mbpr_backup_20260605_154850/: MEMORY.md.mbpr.json  README.md.mbpr.json
BioSense/.mbpr_backup_20260605_155500/: CONCEPT.md.best.json  MAP.md.best.json  PROJECT_AUDIT_2026-05-12.md
BioSense/.mbpr_backup_20260605_180934/: MAP.md.mbpr.md  STATE.md.mbpr.json
BioSense/.mbpr_backup_20260605_181239/: CONCEPT.md.mbpr.md  MEMORY.md.mbpr.md  TODO.md.best.json
BioSense/.mbpr_backup_20260605_181544/: MEMORY.md.best.json  PARAMETERS.md.best.json  README.md.mbpr.md  STATE.md.best.json  _pi.md.best.json
BioSense/.mbpr_backup_20260605_182459/: README.md.best.json  _pi.md
BioSense/.mbpr_backup_20260605_182804/: MAP.md.mbpr.json  PARAMETERS.md.best.json  STATE.md
BioSense/.mbpr_backup_20260605_183109/: CONCEPT.md.mbpr.json  README.md
BioSense/.mbpr_backup_20260605_232542/: README.md.best.json
BioSense/.mbpr_backup_20260605_233047/: MEMORY.md.best.json  STATE.md.best.json  TODO.md.best.json  _pi.md.mbpr.json  _pi.md.mbpr.md
BioSense/_archive/: CONCEPT.md.bak_dedupe  CONCEPT.md.pre-merge-2026-05-09
BioSense/article/: BioSense.docx
BioSense/backend/: .env.example  Cargo.toml  Dockerfile  README.md
BioSense/biosense-backend/: Cargo.toml
BioSense/biosense-simulator/: Cargo.toml
BioSense/biosense-web/: Dockerfile  mix.exs
BioSense/datasets/: Cargo.toml
BioSense/frontend/: Dockerfile  README.md  (+1 more)
CDATA/: CLAUDE.md  CONCEPT.iter.md  CONCEPT.md  Cargo.toml  DESIGN.md  EVIDENCE.md  KNOWLEDGE.md  LINKS.md  MAP.md  MEMORY.md  PARAMETERS.md  README.md  STATE.md  THEORY.md  TODO.md  UPGRADE.md
MCOA/: .gitignore  CONCEPT.md  Cargo.toml  DESIGN.md  EVIDENCE.md  OPEN_PROBLEMS.md  PARAMETERS.md  README.md  STATE.md  THEORY.md  UPGRADE.md.draft
Ontogenesis/: CLAUDE.md  CONCEPT.md  Cargo.toml  DESIGN.md  EVIDENCE.md  KNOWLEDGE.md  LINKS.md  MAP.md  MEMORY.md  OPEN_PROBLEMS.md  PARAMETERS.md  README.md  THEORY.md  TODO.md  UPGRADE.md
Ze/: .gitignore  CONCEPT.md.best.bak  CONCEPT.md.best.json  Cargo.toml  DESIGN.md  Dockerfile  EVIDENCE.md  MAP.md.mbpr.json  OPEN_PROBLEMS.md  PARAMETERS.md  README.md  STATE.md  STATE.md.mbpr.json  THEORY.md  TODO.md.mbpr.json  _pi.md.mbpr.json  run.sh
shared-types/: Cargo.toml
sim_core/: Cargo.toml
(+3674 files in other folders)
