[workspace]
members = [
    "crates/cell_dt_core",
    "crates/cell_dt_cli",
    "crates/cell_dt_modules/mitochondrial",
    "crates/cell_dt_modules/inflammaging",
    "crates/cell_dt_modules/asymmetric_division",
    "crates/cell_dt_modules/tissue_specific",
    "crates/cell_dt_modules/aging_engine",
    "crates/cell_dt_gui",
    "crates/cell_dt_validation",
    "crates/cell_dt_python",
]
resolver = "2"

[workspace.dependencies]
# Shared cross-project types — single source of truth for Ze constants and
# parameter registry (audit P0 #6, 2026-05-08). Use in member crates as:
#   lc-shared-types.workspace = true
lc-shared-types = { path = "../shared-types" }
