[workspace]
resolver = "2"
members = [
    "crates/mcoa_core",
    "crates/mcoa_simulation",
    "crates/mcoa_tests",
    "crates/mcoa_api",
    "crates/mcoa_cli",
    "crates/mcoa_compare",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Jaba Tkemaladze <jaba@longevity.ge>"]
license = "MIT"
repository = "https://github.com/djabbat/LongevityCommon"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
clap = { version = "4", features = ["derive"] }
nalgebra = "0.33"
rand = "0.8"
rand_chacha = "0.3"
thiserror = "1"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
