[package]
name = "ontogenesis"
version = "0.1.0"
edition = "2021"
description = "Ontogenesis v4.1 — human development simulation 0–25 years"

[lib]
name = "ontogenesis"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
thiserror = "1"

[dev-dependencies]
approx = "0.5"
