[package]
name = "lc-shared-types"
version = "0.1.0"
edition = "2021"
description = "LongevityCommon shared types — canonical Ze constants, parameter registry, SI units, JSON Schema for PARAMETERS.md."
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
serde_yaml = "0.9"
