[package]
name = "organismal_aging"
version = "0.1.0"
edition = "2021"
description = "Organismal Aging — Self-learning 4D organism simulator (3D + time)"
authors = ["Jaba Tqemaladze <jaba@longevity.ge>"]
license = "Apache-2.0"
repository = "https://github.com/djabbat/LC"

[dependencies]
# Математика
ndarray = "0.15"
statrs = "0.16"
rand = "0.8"
rand_distr = "0.4"

# Сериализация
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Логирование и ошибки
log = "0.4"
env_logger = "0.10"
thiserror = "1"

# CLI (для sim_cli)
clap = { version = "4", optional = true }

# Python (для sim_py)
pyo3 = { version = "0.20", optional = true }

# Web API (для sim_api)
actix-web = { version = "4", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1"
approx = "0.5"

[features]
default = []
cli = ["clap"]
python = ["pyo3"]
api = ["actix-web"]
full = ["cli", "python", "api"]

[[bench]]
name = "aging_simulation"
harness = false

[[example]]
name = "life_simulation"
path = "examples/life_simulation.rs"

[[bin]]
name = "oa"
path = "src/bin/cli.rs"

[lib]
name = "organismal_aging"
path = "src/lib.rs"
