[package]
name = "biosense-backend"
version = "0.1.0"
edition = "2021"
authors = ["Jaba Tkemaladze <jaba@longevity.ge>"]
license = "MIT"
description = "BioSense Rust backend — χ_Ze biomarker computation, MCOA bridge, exacerbation risk. Listens on 127.0.0.1:4502 (decided 2026-05-07)."

[[bin]]
name = "biosense-backend"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
