[package]
name = "biosense-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP API for BioSense simulator (axum, port 4101)."

[dependencies]
biosense-simulator = { path = "../biosense-simulator" }
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
