[package]
name = "biosense-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Reference simulator for BioSense: velocity, predictive information, χ_Ze, bridge, exacerbation, privacy."

[lib]
name = "biosense_simulator"
path = "src/lib.rs"

[[bin]]
name = "biosense_sim"
path = "src/bin/biosense_sim.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
rand = { workspace = true }
