[package]
name = "biosense-datasets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Dataset loaders for BioSense (LEMON, Cuban, NHATS, All-of-Us, UKBB, ...)."

[dependencies]
biosense-simulator = { path = "../biosense-simulator" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = "0.5"
