[package]
name = "fclc_backend"
version = "0.1.0"
edition = "2021"
authors = ["CommonHealth Team"]
description = "Federated Clinical Learning Cooperative Backend"
license = "MIT"
repository = "https://github.com/CommonHealth/FCLC"

[[bin]]
name = "fclc_backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros", "headers"] }
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
uuid = { version = "1.8", features = ["serde", "v4"] }
argon2 = "0.5"
jsonwebtoken = "9.2"
config = "0.14"
dotenvy = "0.15"
validator = { version = "0.16", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full"] }
bb8 = "0.8"
bb8-postgres = "0.8"

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "macros", "migrate"] }
[workspace]
