[package]
name = "hap_backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hap_backend"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
validator = { version = "0.16", features = ["derive"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
argon2 = "0.5"

[dev-dependencies]
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "migrate", "offline"] }
[workspace]
