[package]
name = "ze-simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Reference simulator for Ze Theory: impedance, proper-time, CHSH deformation, correlation decay, QFI bound."

[lib]
name = "ze_simulator"
path = "src/lib.rs"

[[bin]]
name = "ze_sim"
path = "src/bin/ze_sim.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
ndarray = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
approx = "0.5"
