[package]
name = "mcoa_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Multi-Counter Architecture of Organismal Aging — core types, formulas, tissue weights, coupling matrix"

[dependencies]
serde = { workspace = true }
nalgebra = { workspace = true }
thiserror = { workspace = true }
