[package]
name = "mcoa_api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Axum REST + WebSocket API for MCOA, consumed by the Phoenix frontend."

[[bin]]
name = "mcoa-api"
path = "src/main.rs"

[dependencies]
mcoa_core = { path = "../mcoa_core" }
mcoa_simulation = { path = "../mcoa_simulation" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = "1"
