[package]
name = "ze-qmc-4d"
version = "2.1.0"
edition = "2021"

[lib]
name = "ze_qmc_4d"
path = "src/lib.rs"

[[bin]]
name = "ze-qmc-4d"
path = "src/main.rs"

[dependencies]
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "wolff_bench"
harness = false
