[package]
name = "aim-ai-prompt-impact"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "AIM AI — prompt-impact analysis (PI1). Join prompt-version history with ledger runs by ts; compute before/after deltas around each revision. Rust port of AI/ai/prompt_impact.py."

[dependencies]
aim-ai-ledger = { path = "../aim-ai-ledger" }
aim-ai-prompt-versions = { path = "../aim-ai-prompt-versions" }

serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
